# acai-omr

./: .gitignore  .gitmodules  README.md  app.py  calc_dataset_stats.py  datasets.py  debug_pretrained_mae.pth  inference_result.lmx  inference_result.musicxml  lmx_vocab.txt  omr_train.out  prepare_primus_data.py  pyproject.toml  requirements.txt  test_datasets.py  utils.py
acai_omr/: __init__.py  config.py  wsgi.py
acai_omr/inference/: system_detector_inference.py  vitomr_inference.py
acai_omr/models/: eval_model.py  kv_caching.py  models.py  system_detector_eval.py
acai_omr/train/: datasets.py  omr_grpo_train.py  omr_teacher_force_train.py  omr_train.py  pre_train.py  system_detector_train.py
acai_omr/ui/: inference_events.json  routes.py
acai_omr/utils/: calc_dataset_stats.py  copy_data_dir.sh  create_lmx_vocab_file.py  new_machine_setup.sh  prepare_doremi_data.py  split_coco_json.py  utils.py  webservice_setup.sh
docs/: design_decisions.md  detailed.md  guiding_papers.md  model_architecture.md  training.md
src/: calc_dataset_stats.py  copy_data_dir.sh  datasets.py  eval_model.py  models.py  omr_train.py  pre_train.py  prepare_doremi_data.py  prepare_primus_data.py  test_datasets.py  test_mae.py  test_omr_train.py  test_pre_train.py  test_vitomr.py  utils.py  vitomr_inference.py
src/util_scripts/: calc_dataset_stats.py  (+2 more)
tests/: test_datasets.py  test_kv_caching.py  test_mae.py  test_omr_grpo_train.py  test_omr_teacher_force_train.py  test_omr_train.py  test_pre_train.py  test_vitomr.py
vitomr_prediction_test/: pred.txt  target_seq.txt
(+53 files in other folders)
