[tool.poetry]
name = "acai-omr"
version = "0.0.5"
description = ""
authors = ["jsnchon"]
readme = "README.md"
packages = [
    { include = "acai_omr" }
]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.1"
torchvision = "^0.22.1"
pandas = "^2.3.0"
pytest = "^8.4.1"
tqdm = "^4.67.1"
pytest-mock = "^3.14.1"
matplotlib = "^3.10.3"
flask = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
