[tool.poetry]
name = "acai-omr"
version = "0.0.5"
description = ""
authors = ["jsnchon"]
readme = "README.md"
packages = [
    { include = "acai_omr" },
    { include = "olimpic_app", from = "olimpic-icdar24" }
]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.1"
torchvision = "^0.22.1"
pandas = "^2.3.0"
pytest = "^8.4.1"
tqdm = "^4.67.1"
pytest-mock = "^3.14.1"
matplotlib = "^3.10.3"
zss = "^1.2.0"
levenshtein = "^0.27.1"
tensorboard = "^2.20.0"
flask = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
